deployments/cilium-extensions/hubble-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui-http-route
spec:
  parentRefs:
    - name: default-cilium-gateway
      sectionName: https
  hostnames:
    - "hubble-ui.192.168.100.243.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name:  hubble-ui
          namespace: kube-system
          port: 80
